the big fix on item gaps for all

--- a/assets/less/item.less
+++ b/assets/less/item.less
@@ -91,5 +91,6 @@ blockquote {
 }
 
 .item-reference {
-  padding: 0 0 calc( @item-visual-gap * 50% ) 0;
+  padding: 0;
+  padding-bottom: calc( @item-visual-gap * 0.5 );
 }
